--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Macia Boaventura Advocacia</title>
+    <title>Marcia Boaventura Advocacia</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -27,30 +27,23 @@
         <!-- Header -->
         <header id="header">
           <h1>Marcia Boaventura</h1>
-          <p>
-            <strong
-              ><b
-                >Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp;
-                Never asked for this</b
-              ></strong
-            >
-          </p>
+          <p class="apresentacao">Advogada &nbsp;&bull;&nbsp; Certa &nbsp;&bull;&nbsp; Para você</p>
           <nav>
             <ul>
               <li>
                 <a href="#" class="icon brands fa-instagram">
-									<span class="label">Instagram</span>
-								</a>
+                  <span class="label">Instagram</span>
+                </a>
               </li>
               <li>
-                <a id="whatsapp" href="#" class="icon brands fa-whatsapp">
-									<span class="label">Whatsapp</span>
-								</a>
+                <a id="abrirModal" href="#" class="icon brands fa-whatsapp">
+                  <span class="label">Whatsapp</span>
+                </a>
               </li>
               <li>
                 <a href="#" class="icon solid fa-envelope">
-									<span class="label">Email</span>
-								</a>
+                  <span class="label">Email</span>
+                </a>
               </li>
             </ul>
           </nav>
@@ -65,6 +58,17 @@
         </footer>
       </div>
     </div>
+    <div id="modalContato" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Contato WhatsApp</h2>
+        <label for="nome">Qual seu nome?*</label>
+        <input type="text" id="nome" name="nome" required />
+        <label for="assunto">Assunto:</label>
+        <textarea id="assunto" name="assunto"></textarea>
+        <button class="icon brands fa-whatsapp" id="enviarWhatsApp"> Enviar mensagem</button>
+      </div>
+    </div>
     <script>
       window.onload = function () {
         document.body.classList.remove("is-preload");
@@ -75,21 +79,46 @@
       window.onorientationchange = function () {
         document.body.scrollTop = 0;
       };
-      function abrirWhatsApp(numero, mensagem) {
-        mensagem = encodeURIComponent(mensagem);
-        const url = `https://wa.me/${numero}?text=${mensagem}`;
+      const modal = document.getElementById("modalContato");
+      const btnAbrirModal = document.getElementById("abrirModal");
+      const btnFecharModal = document.getElementsByClassName("close")[0];
+      const btnEnviarWhatsApp = document.getElementById("enviarWhatsApp");
+
+      btnAbrirModal.onclick = function () {
+        modal.style.display = "block";
+      };
+
+      btnFecharModal.onclick = function () {
+        modal.style.display = "none";
+      };
+
+      window.onclick = function (event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      };
+
+      btnEnviarWhatsApp.onclick = function () {
+        const nome = document.getElementById("nome").value;
+        const assunto = document.getElementById("assunto").value;
+        const numeroWhatsApp = "554195572914";
+
+        if (nome.trim() === '') {
+          alert('O nome é obrigatório.');
+          return;
+        }
+
+        let mensagem = `Olá Dra. Marcia. Sou ${nome} e estou entrando em contato através do site. `;
+        if (assunto.trim() !== "") {
+          mensagem += `\nAssunto:\n${assunto}`;
+        }
+
+        const url = `https://wa.me/${numeroWhatsApp}?text=${encodeURIComponent(
+          mensagem
+        )}`;
         window.open(url, "_blank");
-      }
-
-      // Exemplo de uso:
-      document
-        .getElementById("whatsapp")
-        .addEventListener("click", function () {
-          const numeroWhatsApp = "554195572914";
-          const mensagemWhatsApp = "Olá, gostaria de mais informações."; // Substitua pela mensagem desejada
-
-          abrirWhatsApp(numeroWhatsApp, mensagemWhatsApp);
-        });
+        modal.style.display = "none";
+      };
     </script>
   </body>
 </html>
