--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Header -->
         <header id="header">
           <h1>Marcia Boaventura</h1>
-          <p class="apresentacao">Advogada &nbsp;&bull;&nbsp; Certa &nbsp;&bull;&nbsp; Para você</p>
+          <span class="apresentacao">Direito Civil &nbsp;&bull;&nbsp; Direito Penal &nbsp;&bull;&nbsp; Direito do Consumidor</span>
           <nav>
             <ul>
               <li>
@@ -118,6 +118,8 @@
         )}`;
         window.open(url, "_blank");
         modal.style.display = "none";
+        document.getElementById('nome').value = '';
+        document.getElementById('assunto').value = '';
       };
     </script>
   </body>
