--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <li><a href="#" class="abrirModal">Contato</a></li>
       </ul>
     </nav>
-    <div id="wrapper">
+    <div class="wrapper">
       <div id="bg"></div>
       <div id="overlay"></div>
       <div id="main">
         <!-- Header -->
-        <header id="header">
+        <header class="header">
           <h1>Marcia Boaventura</h1>
           <p class="apresentacao">
             Direito Civil &nbsp;&bull;&nbsp; Direito Penal &nbsp;&bull;&nbsp;
@@ -67,8 +67,8 @@
     </div>
     <!-- New Section -->
     <section id="about">
-      <div id="wrapper">
-        <div class="content" id="header">
+      <div class="wrapper">
+        <div class="header" >
           <h1>Sobre Nós</h1>
           <div class="about-container">
             <div class="about-image">
