--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <ul id="navbar-menu">
         <li><a href="#main">Início</a></li>
         <li><a href="#about">Sobre Nós</a></li>
+        <li><a href="#areas-atuacao">Áreas de Atuação</a></li>
         <li><a href="#" class="abrirModal">Contato</a></li>
       </ul>
     </nav>
@@ -40,23 +41,32 @@
         <header class="header">
           <h1>Marcia Boaventura</h1>
           <p class="apresentacao">
-            Direito Civil &nbsp;&bull;&nbsp; Direito Penal &nbsp;&bull;&nbsp;
-            Direito do Consumidor
+            Direito Civil &nbsp;&bull;&nbsp;
+            Direito do Consumidor &nbsp;&bull;&nbsp; Direito Penal
           </p>
           <nav>
             <ul>
               <li>
-                <a href="https://www.instagram.com/adv.marciaboaventura" class="icon brands fa-instagram">
+                <a
+                  href="https://www.instagram.com/adv.marciaboaventura"
+                  class="icon brands fa-instagram"
+                >
                   <span class="label">Instagram</span>
                 </a>
               </li>
               <li>
-                <a href="https://wa.me/5541997085626" class="icon brands fa-whatsapp">
+                <a
+                  href="https://wa.me/5541997085626"
+                  class="icon brands fa-whatsapp"
+                >
                   <span class="label">Whatsapp</span>
                 </a>
               </li>
               <li>
-                <a href="mailto:contato@marciaboaventura.adv.br" class="icon solid fa-envelope">
+                <a
+                  href="mailto:contato@marciaboaventura.adv.br"
+                  class="icon solid fa-envelope"
+                >
                   <span class="label">Email</span>
                 </a>
               </li>
@@ -66,9 +76,9 @@
       </div>
     </div>
     <!-- New Section -->
-    <section id="about">
+    <section class="secao" id="about">
       <div class="wrapper">
-        <div class="header" >
+        <div class="header">
           <h1>Sobre Nós</h1>
           <div class="about-container">
             <div class="about-image">
@@ -99,6 +109,41 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="secao" id="areas-atuacao">
+      <div class="wrapper">
+        <div class="header">
+          <h1>Áreas de Atuação</h1>
+          <div class="cards-container">
+            <div class="card">
+              <i class="icon solid fa-gavel"></i>
+              <h3>Direito Civil</h3>
+              <p>
+                Atuamos em questões contratuais, indenizações, direito de
+                família e sucessões, sempre com foco na solução mais adequada
+                para nossos clientes.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon solid fa-handshake"></i>
+              <h3>Direito do Consumidor</h3>
+              <p>
+                Proteção dos direitos do consumidor em casos de práticas
+                abusivas, cobranças indevidas e litígios com fornecedores.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon solid fa-balance-scale"></i>
+              <h3>Direito Penal</h3>
+              <p>
+                Defesa em processos criminais, acompanhamento em inquéritos e
+                consultoria jurídica para garantir os direitos fundamentais.
+              </p>
+            </div>
+          </div>
+        </div>
+
 
         <!-- Footer -->
         <footer id="footer">
@@ -130,9 +175,7 @@
       };
 
       const modal = document.getElementById("modalContato");
-      const btnsAbrirModal = document.querySelectorAll(
-        ".abrirModal"
-      );
+      const btnsAbrirModal = document.querySelectorAll(".abrirModal");
       const btnFecharModal = document.getElementsByClassName("close")[0];
       const btnEnviarWhatsApp = document.getElementById("enviarWhatsApp");
       function abrirModal() {
@@ -140,7 +183,7 @@
       }
       btnsAbrirModal.forEach((btn) => {
         btn.onclick = function () {
-          abrirModal()
+          abrirModal();
         };
       });
 
@@ -190,7 +233,7 @@
         link.onclick = function () {
           navbarMenu.classList.remove("show");
           if (link.classList.contains("abrirModal")) {
-            abrirModal()
+            abrirModal();
           }
         };
       });
@@ -199,7 +242,12 @@
         navbarMenu.classList.remove("show");
       };
     </script>
-    <a href="https://wa.me/5541997085626" class="icon brands fa-whatsapp fa-2x" target="_blank" id="whatsapp-icon">
+    <a
+      href="https://wa.me/5541997085626"
+      class="icon brands fa-whatsapp fa-2x"
+      target="_blank"
+      id="whatsapp-icon"
+    >
     </a>
   </body>
 </html>
