Adicionado um rodapé com contatos

--- a/index.html
+++ b/index.html
@@ -197,18 +197,34 @@
           </div>
         </div>
 
-
-        <!-- Footer -->
-        <footer id="footer">
-          <div>
-            <span class="copyright">
-              &copy; 2025 Marcia Boaventura - Advocacia. Design:
-              <a href="http://html5up.net"> HTML5 UP</a>.</span
-            >
-          </div>
-        </footer>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="logo">
+          <img src="/assets/css/images/soh_logo.jpeg" alt="Logo" />
+          <div class="logo-text">
+            Marcia Boaventura
+            <span>Advocacia</span>
+          </div>
+        </div>
+        <div class="contact-info">
+          <h3>Contatos</h3>
+          <a href="https://wa.me/5541997085626" class="icon brands fa-whatsapp" target="_blank">(41) 99708-5626</a>
+          <a href="mailto:contato@marciaboaventura.adv.br" class="icon solid fa-envelope">contato@marciaboaventura.adv.br</a>
+          <a href="https://www.instagram.com/adv.marciaboaventura" class="icon brands fa-instagram" target="_blank">@adv.marciaboaventura</a>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>
+          &copy; 2025 Marcia Boaventura - Advocacia. <br />
+          Atendimento em todo Brasil.<br />
+          Criado por <a href="https://www.linkedin.com/in/marcos-renato/" target="_blank">Marcos Renato.</a> Design: <a href="http://html5up.net">HTML5 UP</a>
+        </p>
+      </div>
+    </footer>
     <div id="modalContato" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
