--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
               <i class="icon solid fa-gavel original"></i>
               <h3 class="original">Direito Civil</h3>
               <p>
-                Atuamos em questões contratuais, indenizações, direito de
-                família e sucessões, sempre com foco na solução mais adequada
+                Atuamos em questões contratuais, indenizações e sucessões, sempre com foco na solução mais adequada
                 para nossos clientes.
               </p>
               <div class="expanded-content">
@@ -148,9 +147,28 @@
                 </div>
                 <p>No Direito Civil, o escritório oferece serviços estratégicos para lidar com diversas questões legais, incluindo:</p>
                 <ul>
-                  <li><strong>Família:</strong> Atuação em processos de divórcio, guarda de filhos, pensão alimentícia e partilha de bens, buscando soluções que priorizem o bem-estar das partes envolvidas.</li>
                   <li><strong>Obrigações:</strong> Assessoria jurídica em contratos, acordos de pagamento e execuções de dívidas, com o objetivo de proteger os interesses de quem busca uma solução justa.</li>
                   <li><strong>Responsabilidade Civil:</strong> Atuação em casos de indenização por danos materiais e morais, com foco na compensação justa para quem teve seus direitos violados.</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card" id="card-direito-familia">
+              <i class="icon solid fa-users original"></i>
+              <h3 class="original">Direito de Família</h3>
+              <p>
+                Atuação em processos de divórcio, guarda, pensão alimentícia, reconhecimento e dissolução de união estável, entre outros.
+              </p>
+              <div class="expanded-content">
+                <button class="close-card">&times;</button>
+                <div class="card-header">
+                  <i class="icon solid fa-users"></i>
+                  <h3>Direito de Família</h3>
+                </div>
+                <ul>
+                  <li>Atendimento especializado em <strong>divórcios judiciais e extrajudiciais</strong>, buscando soluções consensuais ou litigiosas conforme a necessidade.</li>
+                  <li>Atuação em <strong>guarda de filhos</strong>, <strong>regulamentação de visitas</strong> e <strong>pensão alimentícia</strong>, sempre priorizando o melhor interesse da criança.</li>
+                  <li>Reconhecimento e dissolução de <strong>união estável</strong>, partilha de bens e demais questões patrimoniais e pessoais.</li>
+                  <li>Orientação e defesa em <strong>processos de adoção</strong> e demais demandas familiares.</li>
                 </ul>
               </div>
             </div>
@@ -333,6 +351,7 @@
       configurarCartaoExpandido("card-direito-civil");
       configurarCartaoExpandido("card-direito-consumidor");
       configurarCartaoExpandido("card-direito-penal");
+      configurarCartaoExpandido("card-direito-familia");
     </script>
     <a
       href="https://wa.me/5541997085626"
