--- a/index.html
+++ b/index.html
@@ -7,40 +7,50 @@
 <html>
 
 <head>
-  <title>Marcia Boaventura Advocacia</title>
-  <meta charset="utf-8" />
+  <title>Marcia Boaventura Advogada | Direito Civil, Família e Penal</title>
+  <meta name="description" content="Marcia Boaventura Advocacia: serviços jurídicos estratégicas em Direito Civil, Família, Direito do Consumidor e Criminal. Atendimento humanizado e estratégico.">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css" />
   </noscript>
-
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <style>
-    .card-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .card-header h3 {
-      margin: 0;
-    }
-
-    .close-card {
-      background: none;
-      border: none;
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-  </style>
+  <meta charset="utf-8" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Marcia Boaventura Advogada | Direito Civil, Família e Penal">
+  <meta property="og:description" content="Atendimento jurídico humanizado e estratégico em Curitiba e região.">
+  <meta property="og:image" content="https://marciaboaventura.adv.br/assets/images/social-card.jpg">
+  <meta property="og:url" content="https://marciaboaventura.adv.br/">
+  <meta property="og:type" content="website">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Marcia Boaventura Advocacia">
+  <meta name="twitter:description" content="Direito Civil, Família, Penal e do Consumidor com atendimento humanizado.">
+  <meta name="twitter:image" content="https://marciaboaventura.adv.br/assets/images/social-card.jpg">
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LegalService",
+    "name": "Marcia Boaventura Advocacia",
+    "image": "https://marciaboaventura.adv.br/assets/images/marcia.jpg",
+    "url": "https://marciaboaventura.adv.br/",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Almirante Tamandaré",
+      "addressRegion": "PR",
+      "addressCountry": "BR"
+    },
+    "telephone": "+55-41-99708-5626"
+  }
+  </script>
 </head>
 
 <body class="is-preload">
   <!-- Navigation Bar -->
   <nav id="navbar">
     <div class="logo">
-      <img src="/assets/css/images/soh_logo.jpeg" alt="Logo" />
+      <img src="/assets/css/images/logo.jpeg" alt="Logo" />
     </div>
     <button id="navbar-toggle" class="hamburger">&#9776;</button>
     <ul id="navbar-menu">
@@ -116,19 +126,19 @@
           <div class="about-image">
             <figcaption>Dra. Marcia Boaventura</figcaption>
             <figcaption>Advogada OAB/PR nº 129.081</figcaption>
-            <img src="/assets/css/images/marciaadv2.jpg" alt="Sobre" />
+            <img src="/assets/css/images/marcia.jpg" alt="Advogada Marcia Boaventura OAB PR 129081" />
           </div>
         </div>
         <div class="about-container">
           <div class="about-image">
-            <img src="/assets/css/images/sobre-nos2.jpg" alt="Sobre" />
+            <img src="/assets/css/images/marcia-2.jpg" alt="Advogada Marcia Boaventura OAB PR 129081" />
           </div>
           <div class="about-image-column">
             <div class="about-image">
-              <img src="/assets/css/images/sobre-nos3.jpg" alt="Sobre" />
+              <img src="/assets/css/images/marcia-3.jpg" alt="Advogada Marcia Boaventura OAB PR 129081" />
             </div>
             <div class="about-image">
-              <img src="/assets/css/images/sobre-nos4.jpg" alt="Sobre" />
+              <img src="/assets/css/images/marcia-4.jpg" alt="Advogada Marcia Boaventura OAB PR 129081" />
             </div>
           </div>
         </div>
@@ -175,7 +185,7 @@
                 <h3>Direito de Família</h3>
               </div>
               <ul>
-                <li>Atendimento especializado em <strong>divórcios judiciais e extrajudiciais</strong>, buscando
+                <li>Atendimento em <strong>divórcios judiciais e extrajudiciais</strong>, buscando
                   soluções de forma amigável ou judicial, conforme a necessidade.</li>
                 <li>Atuação em <strong>guarda de filhos</strong>, <strong>regulamentação de visitas</strong> e
                   <strong>pensão alimentícia</strong>, sempre priorizando o melhor interesse da criança.
@@ -245,7 +255,7 @@
   <footer id="footer">
     <div class="footer-top">
       <div class="logo">
-        <img src="/assets/css/images/soh_logo.jpeg" alt="Logo" />
+        <img src="/assets/css/images/logo.jpeg" alt="Logo" />
         <div class="logo-text">
           Marcia Boaventura
           <span>Advocacia</span>
