Fix erro ortografia

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
   <title>Marcia Boaventura Advogada | Direito Civil, Família e Penal</title>
-  <meta name="description" content="Marcia Boaventura Advocacia: serviços jurídicos estratégicas em Direito Civil, Família, Direito do Consumidor e Criminal. Atendimento humanizado e estratégico.">
+  <meta name="description" content="Marcia Boaventura Advocacia: serviços jurídicos estratégicos em Direito Civil, Família, Direito do Consumidor e Criminal. Atendimento humanizado e estratégico.">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <noscript>
