--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <li><a href="#main">Início</a></li>
       <li><a href="#about">Sobre</a></li>
       <li><a href="#areas-atuacao">Áreas de Atuação</a></li>
+      <li><a href="/blog" class="active">Blog</a></li>
       <li><a href="#" class="abrirModal">Contato</a></li>
     </ul>
   </nav>
@@ -293,103 +294,7 @@
       </button>
     </div>
   </div>
-  <script>
-    window.onload = function () {
-      document.body.classList.remove("is-preload");
-    };
-
-    const modal = document.getElementById("modalContato");
-    const btnsAbrirModal = document.querySelectorAll(".abrirModal");
-    const btnFecharModal = document.getElementsByClassName("close")[0];
-    const btnEnviarWhatsApp = document.getElementById("enviarWhatsApp");
-    function abrirModal() {
-      modal.style.display = "block";
-    }
-    btnsAbrirModal.forEach((btn) => {
-      btn.onclick = function () {
-        abrirModal();
-      };
-    });
-
-    btnFecharModal.onclick = function () {
-      modal.style.display = "none";
-    };
-
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    };
-
-    btnEnviarWhatsApp.onclick = function () {
-      const nome = document.getElementById("nome").value;
-      const assunto = document.getElementById("assunto").value;
-      const numeroWhatsApp = "5541997085626";
-
-      if (nome.trim() === "") {
-        alert("O nome é obrigatório.");
-        return;
-      }
-
-      let mensagem = `Olá Dra. Marcia. Sou ${nome} e estou entrando em contato através do site. `;
-      if (assunto.trim() !== "") {
-        mensagem += `\nAssunto:\n${assunto}`;
-      }
-
-      const url = `https://wa.me/${numeroWhatsApp}?text=${encodeURIComponent(
-        mensagem
-      )}`;
-      window.open(url, "_blank");
-      modal.style.display = "none";
-      document.getElementById("nome").value = "";
-      document.getElementById("assunto").value = "";
-    };
-
-    const navbarToggle = document.getElementById("navbar-toggle");
-    const navbarMenu = document.getElementById("navbar-menu");
-
-    navbarToggle.onclick = function () {
-      navbarMenu.classList.toggle("show");
-    };
-    const navbarLinks = document.querySelectorAll("#navbar-menu a");
-
-    navbarLinks.forEach((link) => {
-      link.onclick = function () {
-        navbarMenu.classList.remove("show");
-        if (link.classList.contains("abrirModal")) {
-          abrirModal();
-        }
-      };
-    });
-
-    window.ontouchmove = function () {
-      navbarMenu.classList.remove("show");
-    };
-
-    function configurarCartaoExpandido(cardId) {
-      const card = document.getElementById(cardId);
-      const closeButton = card.querySelector(".close-card");
-
-      card.onclick = function (event) {
-        if (!card.classList.contains("expanded")) {
-          card.classList.add("expanded");
-        }
-      };
-
-      // Fecha o cartão ao clicar no botão de fechar
-      closeButton.onclick = function (event) {
-        event.stopPropagation(); // Impede que o clique no botão reabra o cartão
-        card.classList.remove("expanded");
-      };
-
-    }
-
-    // Configurar os cartões
-    configurarCartaoExpandido("card-direito-civil");
-    configurarCartaoExpandido("card-direito-consumidor");
-    configurarCartaoExpandido("card-direito-penal");
-    configurarCartaoExpandido("card-direito-familia");
-  </script>
+<script src="js/main.js"></script>
   <a href="https://wa.me/5541997085626" class="icon brands fa-whatsapp fa-2x" target="_blank" id="whatsapp-icon">
   </a>
 </body>
