--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="Marcia Boaventura Advocacia: serviços jurídicos estratégicos em Direito Civil, Família, Direito do Consumidor e Criminal. Atendimento humanizado e estratégico.">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/blog-index.css" />
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css" />
   </noscript>
@@ -57,7 +58,7 @@
       <li><a href="#main">Início</a></li>
       <li><a href="#about">Sobre</a></li>
       <li><a href="#areas-atuacao">Áreas de Atuação</a></li>
-      <li><a href="/blog" class="active">Blog</a></li>
+      <li><a href="#blog" class="active">Blog</a></li>
       <li><a href="#" class="abrirModal">Contato</a></li>
     </ul>
   </nav>
@@ -251,6 +252,24 @@
 
     </div>
   </section>
+<section class="secao" id="blog">
+  <div class="wrapper">
+    <div class="header">
+      <h1>Blog</h1>
+      <p class="blog-intro">Não deixe de conferir o último post do nosso blog</p>
+      <div class="blog-highlight">
+        <a href="/blog/cobranca-indevida-o-que-fazer-quando-voce-e-cobrado-indevidamente.html" class="highlight-card">
+          <div class="highlight-image"></div>
+          <div class="highlight-overlay">
+            <span class="category">Direito do Consumidor</span>
+            <h2 class="title">Cobrança Indevida: o que fazer quando você é cobrado indevidamente?</h2>
+            <p class="excerpt">Saiba como agir e proteger seus direitos quando empresas cobram valores indevidos.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer id="footer">
@@ -295,6 +314,7 @@
     </div>
   </div>
 <script src="js/main.js"></script>
+<script src="js/cards.js"></script>
   <a href="https://wa.me/5541997085626" class="icon brands fa-whatsapp fa-2x" target="_blank" id="whatsapp-icon">
   </a>
 </body>
